fixed width on ios

--- a/client/src/components/Dashboard/Album/Album.css
+++ b/client/src/components/Dashboard/Album/Album.css
@@ -12,9 +12,9 @@ body {
 
 
 #mainViewContainer {
-
     padding-bottom: 90px;
-    width: calc(100% -220px);
+    width: 98%;
+   
 }
 
 #mainContent {
