--- a/client/src/components/Dashboard/Artist/Artist.css
+++ b/client/src/components/Dashboard/Artist/Artist.css
@@ -1,7 +1,7 @@
 #mainViewContainer {
-
     padding-bottom: 90px;
-    width: calc(100% -220px);
+    width: 98%;
+   
 }
 
 #mainContent {
