--- a/client/src/components/Dashboard/Browse/Browse.css
+++ b/client/src/components/Dashboard/Browse/Browse.css
@@ -1,5 +1,6 @@
 #mainViewContainer {
     padding-bottom: 90px;
+    width: 98%;
    
 }
 
